quick portfolio sizing change

--- a/contact.html
+++ b/contact.html
@@ -50,12 +50,12 @@
             <div class="col-md-2">        
             </div>      
     
-        <div class="col-md-4  h-100 d-inline-block w-100">
-            <div class="image-link h-100 d-inline-block w-100">
+        <div class="col-md-4 h-100">
+            <div class="image-link h-100 ">
                     <img src="images/web1.jpg" class="img-fluid img-thumbnail  h-100 d-inline-block w-100">
             </div>            
         </div>
-        
+
         <div class="col-md-4">
                 <div class="image-link h-100 d-inline-block w-100">
                         <img src="images/web2.jpg" class="img-fluid img-thumbnail h-100 d-inline-block w-100">
