--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Bootstrap 101 Template</title>
+  <title>Bootstrap Portfolio</title>
 
   <!-- Bootstrap CDN -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="back.css">
 
 </head>
 
@@ -50,7 +51,7 @@
           </div>
           <div class="col-md-9">
             <p class="lead">
-                Hi! My name is Nick Pyron, and I am a web developer (see? this is a web page I made!). I have 5+ years in the private sector developing solutions for clients while operating as a consultant. A fair number of those projects have been web applications, but many were written as plug-ins or standalone applications written in java or C#.NET. I enjoy mobile and web development and I am here to grow my skill set as a web guy.
+                Hi! My name is Nick Pyron, and I am a web developer. I have 5+ years in the private sector developing solutions for clients while operating as a consultant. A fair number of those projects have been web applications, but many were written as plug-ins or standalone applications written in java or C#.NET. I enjoy mobile and web development and I am here to grow my skill set as a web guy.
             </p>
             <p class="lead">
                 I have many hobbies as I like to learn new things. When I am not coding I like to play guitar, train my dogs (we have four), paint miniature models, and go snowboarding if I get the chance. There isn't much chance in GA, but I like it enough to mention it. There are plenty of other things I like to do as well, but my wife and I have an 18 month old baby in the house and she really gets around! That takes me away from my other interests, but it is worth it.
