--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="page-header">
-                    <h1 class="display-3 align-middle">My Portfolio</h1>
+                    <h1 class="display-3 align-middle text-center">My Portfolio</h1>
                 </div>
             </div>
         </div>
