--- a/contact.html
+++ b/contact.html
@@ -53,10 +53,10 @@
               <div class="card mt-2">
                   <div class="card-body">
                       <p class="lead card-text">
-                          Hi! My name is Nick Pyron, and I am a web developer. I have 5+ years in the private sector developing solutions for clients while operating as a consultant. A fair number of those projects have been web applications, but many were written as plug-ins or standalone applications written in java or C#.NET. I enjoy mobile and web development and I am here to grow my skill set as a web guy.
+                        <a href="https://www.linkedin.com/in/nicholas-pyron-8441136a/" target="_blank">Be sure to view my Linkedin!</a>
                       </p>
                       <p class="lead card-text">
-                          I have many hobbies as I like to learn new things. When I am not coding I like to play guitar, train my dogs (we have four), paint miniature models, and go snowboarding if I get the chance. There isn't much chance in GA, but I like it enough to mention it. There are plenty of other things I like to do as well, but my wife and I have an 18 month old baby in the house and she really gets around! That takes me away from my other interests, but it is worth it.
+                        <a href="https://github.com/pyronasaur" target="_blank">Check out my Github!</a>
                       </p>
                   </div>            
               </div>
