added clicky game to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -99,6 +99,31 @@
             <div class="col-md-2">
             </div>
         </div>
+
+        <div class="row mt-5">
+          <div class="col-md-2">        
+          </div>      
+      
+          <div class="col-md-4">
+              <div class="image-link  d-inline-block w-100 h-100 img-thumbnail">
+                  <a class="nav-link text-medium" href="https://pyronasaur.github.io/clickygame/">
+                      <img src="https://vignette.wikia.nocookie.net/spongebobgalaxy/images/0/07/SpongeBob_SquarePants.png/revision/latest?cb=20171228024014" class="img-fluid d-inline-block">
+                      <figcaption>React Clicky Game</figcaption>
+                    </a>
+              </div>
+          </div>
+          <div class="col-md-4">
+              <div class="image-link h-100 d-inline-block w-100">
+                <a class="nav-link text-medium" href="#">
+                  <img src="images/griffin.png" class="img-fluid d-inline-block">
+                  <figcaption>Nothing!</figcaption>
+                </a>
+              </div>            
+          </div>
+  
+          <div class="col-md-2">
+          </div>
+      </div>
     </div>
 
     <!-- jQuery CDN -->
