committing burger2 added to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -114,9 +114,9 @@
           </div>
           <div class="col-md-4">
               <div class="image-link h-100 d-inline-block w-100">
-                <a class="nav-link text-medium" href="#">
-                  <img src="images/griffin.png" class="img-fluid d-inline-block">
-                  <figcaption>Nothing!</figcaption>
+                <a class="nav-link text-medium" href="https://peaceful-oasis-91431.herokuapp.com">
+                  <img src="images/burger.jpg" class="img-fluid d-inline-block">
+                  <figcaption>Eat-Da-Burger</figcaption>
                 </a>
               </div>            
           </div>
